[package]
name = "mlir"
version = "0.1.0"
edition = "2024"



[dependencies]
rustc_driver = { path = "../../../compiler/rustc_driver" }
rustc_interface = { path = "../../../compiler/rustc_interface" }
rustc_hir = { path = "../../../compiler/rustc_hir" }
rustc_middle = { path = "../../../compiler/rustc_middle" }
